[tool.poetry]
name = "hunterApi"
version = "0.1.0"
description = ""
authors = ["Akkuman <akkumans@qq.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
peewee = "^3.14.4"
pyinstaller = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
